--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,6 @@
 
     <repositories>
         <repository>
-            <id>viaversion-everything</id>
-            <url>https://repo.viaversion.com/everything</url>
-        </repository>
-        <repository>
             <id>funkemunky-releases</id>
             <url>https://nexus.funkemunky.cc/content/repositories/releases/</url>
         </repository>
@@ -210,12 +206,12 @@
         <dependency>
             <groupId>nl.matsv</groupId>
             <artifactId>ViaBackwards</artifactId>
-            <version>3.1.1</version>
+            <version>3.3.0-20w45a</version>
         </dependency>
         <dependency>
             <groupId>us.myles</groupId>
             <artifactId>ViaVersion</artifactId>
-            <version>3.1.1</version>
+            <version>3.3.0-20w45a</version>
         </dependency>
     </dependencies>
 
